tests/pass/negative_literals.tc
int main() {
  int x = -2147483648;
  return (x < 0) && (4 - -1 == 5);
}
