tests/fail/void_return_value.tc
void ping() {
  return 1;
}

int main() {
  ping();
  return 0;
}
